<resources>
    <string name="app_name">MU76</string>
    <string name="title">0</string>
    <string name="title_1">1</string>
    <string name="title_2">2</string>
    <string name="title_3">3</string>
    <string name="title_4">4</string>
    <string name="title_5">5</string>
    <string name="title_6">6</string>
    <string name="title_7">7</string>
    <string name="title_8">8</string>
    <string name="title_9">9</string>
    <string name="title_ac">AC</string>
    <string name="title_PlusMinus">+/-</string>
    <string name="title_percent">%</string>
    <string name="title_division">÷</string>
    <string name="title_x">x</string>
    <string name="title_minus">-</string>
    <string name="title_plus">+</string>
    <string name="title_equally">=</string>
    <string name="title_point">.</string>
</resources>