<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/container"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_marginEnd="26dp"
            android:layout_gravity="bottom|end"
            android:text="@string/title"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:id="@+id/btn_clear"
                android:onClick="oneNumberClick"
                android:text="@string/title_ac"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/title_PlusMinus"
                android:layout_marginHorizontal="18dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/title_percent"
                android:layout_marginEnd="18dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_division"
                android:onClick="oneOperationClick"
                android:text="@string/title_division"/>

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_seven"
                android:onClick="oneNumberClick"
                android:text="@string/title_7"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_eight"
                android:onClick="oneNumberClick"
                android:text="@string/title_8"
                android:layout_marginHorizontal="18dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_nine"
                android:onClick="oneNumberClick"
                android:text="@string/title_9"
                android:layout_marginEnd="18dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_multiplication"
                android:onClick="oneOperationClick"
                android:text="@string/title_x"/>

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_four"
                android:onClick="oneNumberClick"
                android:text="@string/title_4"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/five"
                android:onClick="oneNumberClick"
                android:text="@string/title_5"
                android:layout_marginHorizontal="18dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_six"
                android:onClick="oneNumberClick"
                android:text="@string/title_6"
                android:layout_marginEnd="18dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_minus"
                android:onClick="oneOperationClick"
                android:text="@string/title_minus"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_one"
                android:onClick="oneNumberClick"
                android:text="@string/title_1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_two"
                android:onClick="oneNumberClick"
                android:text="@string/title_2"
                android:layout_marginHorizontal="18dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_three"
                android:onClick="oneNumberClick"
                android:text="@string/title_3"
                android:layout_marginEnd="18dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_plus"
                android:onClick="oneOperationClick"
                android:text="@string/title_plus"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_zero"
                android:onClick="oneNumberClick"
                android:textAlignment="textStart"
                android:paddingStart="33dp"
                android:layout_width="178dp"
                android:text="0"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:text="@string/title_point"
                android:layout_marginHorizontal="18dp"/>


            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="oneOperationClick"
                android:text="@string/title_equally"/>

        </LinearLayout>






    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>